# HiPy

./: .gitignore  README.md  library.json  metadata.json  pyproject.toml  requirements.txt
src/: parser.py
src/hipy/: __init__.py  app.tcss  elements.py  main.py  main.tcss  parser.py  player.py  test.py
src/hipy/TUI/: elements.py  elements.tcss
