[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hipy"
version = "0.1.0"
description = "A cool music companion"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "IAC-3" },
]
dependencies = [
    "textual==8.2.4",
    "rich-pixels==3.0.1",
    "pymediainfo==7.0.1",
    "mutagen==1.47.0",
    "pygame==2.6.1",
    "rich==15.0.0",
    "pillow==12.2.0",
    "typing_extensions==4.15.0",
]

[project.optional-dependencies]
dev = [
    "textual-dev>=1.0",
]

[project.urls]
Repository = "https://github.com/IAC-3/HiPy"

[tool.setuptools.packages.find]
where = ["src"]
